Enhanced Backpack logic